@@ -1,13 +1,13 @@
 {
-  "timestamp" : "2022-06-01T01:43:50Z",
+  "timestamp" : "2022-06-01T08:24:38Z",
   "count_outdated" : 273,
   "uniques_outdated" : 176,
   "count" : 302,
-  "uniques" : 195,
+  "uniques" : 196,
   "clones" : [
     {
       "timestamp": "2022-05-18T00:00:00Z",
-      "count": 3,
+      "count": 2,
       "count_minmax": [ 1, 3 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
@@ -60,6 +60,13 @@
       "count_minmax": [ 1, 3 ],
       "uniques": 2,
       "uniques_minmax": [ 1, 2 ]
+    },
+    {
+      "timestamp": "2022-06-01T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
     }
   ]
 }
